# self-pressurized-LRE-with-N2O-and-simulations

./: .gitignore  N2O_design-sa-radijusomSpremnika-old.py  README.md  config.py  main.py  pyproject.toml  requirements.txt  slurmmain.sh
CAD/: design_data.json  geometryFreecad.py  mlaznica3DPrint.20250508-234248.FCBak  mlaznica3DPrint.FCStd  mlaznicaCFD.20250523-215125.FCBak  mlaznicaCFD.FCStd  regenCooling.py
github/moc/: .gitignore  README.md
github/moc/data/: example.csv
github/moc/docs/: moc.tex
github/moc/src/min_length_nozzle/: constants.py  fan.py  flow.py  geometry.py  initializer.py  lines.py  main.py  nozzle.py  output.py
propulsion/engine/: nozzleGeometry.py  scrintleInjector.py
propulsion/physics/: CEA.py  thermodynamics.py
propulsion/tank/: concentricTanks.py
simulations/: ColdFlowTest.py  HotFire.py  coldflowtest-pressure.json  flight-dynamics.py  optimisationCFD.py
simulations/CFD/ngo/: .gitignore  README.md  nozzleGMSH-backup.py  nozzleGMSH.py  nozzleGeometryOptimisation.py  openfoam_preprocessing.py  preprocessingNGO.py
simulations/CFD/ngo/sonicFoam/: Allclean  Allrun
simulations/CFD/ngo/sonicFoam/0/: T  U  alphat  k  nut  omega  p
simulations/CFD/ngo/sonicFoam/0.orig/: U  p
simulations/CFD/ngo/sonicFoam/constant/: thermophysicalProperties
simulations/CFD/ngo/sonicFoam/system/: changeDictionaryDict  controlDict  decomposeParDict  fvOptions
simulations/CFD/ngo/sonicFoam1/0.orig/: T
simulations/CFD/transient/mlaznica/: Allclean  Allrun  Allrun-parallel  mlaznica3.py  mlaznicaV3-CFD.20250415-140320.FCBak  mlaznicaV3-CFD.FCStd
(+101 files in other folders)
