[project]
name = "self-pressurized-LRE-with-N2O-and-simulations"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["cantera>=3.1.0", "coolprop>=6.8.0", "numpy>=2.3.2", "matplotlib>=3.10.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
